packages/ag-grid-theme/css/salt-ag-grid-theme.css
/* ... */
/* This makes sure custom cell editor would start from no padding. Built-in ag grid editor's padding is added below. */
div[class*="ag-theme-salt"] .ag-cell-inline-editing {
  padding: 0;
}

div[class*="ag-theme-salt"] .editable-cell,
div[class*="ag-theme-salt"] .editable-numeric-cell {
  outline: var(--salt-size-border) var(--salt-container-borderStyle) var(--salt-editable-borderColor);
  outline-offset: -1px;
  text-align: right;
}

div[class*="ag-theme-salt"] .ag-cell.numeric-cell {
  text-align: right;
}

/* Special case when user finish editing and click out side of the grid. */
div[class*="ag-theme-salt"] .ag-cell.numeric-cell.ag-cell-inline-editing .ag-cell-editor input:not(:focus) {
  text-align: right;
}

div[class*="ag-theme-salt"] .ag-has-focus .ag-cell.ag-cell-focus:not(.ag-cell-range-selected),
div[class*="ag-theme-salt"] .ag-context-menu-open .ag-cell.ag-cell-focus:not(.ag-cell-range-selected),
div[class*="ag-theme-salt"] .ag-cell-range-single-cell,
div[class*="ag-theme-salt"] .ag-cell-range-single-cell.ag-cell-range-handle,
div[class*="ag-theme-salt"] .ag-cell-focus:not(.ag-cell-range-selected):focus-within {
  outline: var(--salt-focused-outlineWidth) var(--salt-focused-outlineStyle) var(--salt-focused-outlineColor);
  outline-offset: -2px;
  border-width: 0;
}

div[class*="ag-theme-salt"] .ag-cell-wrapper.ag-row-group {
  align-items: center;
}

div[class*="ag-theme-salt"] .ag-cell.editable-cell.ag-cell-focus:focus,
div[class*="ag-theme-salt"] .editable-numeric-cell.ag-cell-focus:focus,
div[class*="ag-theme-salt"] .editable-cell.ag-cell-focus:focus-within {
  overflow: visible;
}

div[class*="ag-theme-salt"] .ag-cell.editable-cell.ag-cell-focus:focus:before,
div[class*="ag-theme-salt"] .ag-cell.editable-numeric-cell.ag-cell-focus:focus:before,
div[class*="ag-theme-salt"] .ag-cell.editable-cell.ag-cell-focus:focus-within:before,
div[class*="ag-theme-salt"] .editable-cell.ag-cell-inline-editing:before {
  border-bottom: calc(var(--salt-size-adornment) + 4px) solid transparent;
  border-left: calc(var(--salt-size-adornment) + 4px) solid var(--salt-editable-borderColor-hover);
  border-top: 0 solid transparent;
  content: "";
  left: 0px;
  position: absolute;
  top: 0px;
  z-index: 2;
}

div[class*="ag-theme-salt"] .editable-numeric-cell input,
div[class*="ag-theme-salt"] input[class^="ag-"][type="number"] {
  padding: 0 var(--salt-spacing-100);
  height: calc(var(--salt-size-base) + var(--salt-spacing-100));
}

div[class*="ag-theme-salt"] .editable-cell input,
div[class*="ag-theme-salt"] .editable-numeric-cell input {
  border: none;
  background-color: transparent;
}

div[class*="ag-theme-salt"] .ag-cell.ag-cell-range-selected:not(.ag-cell-range-single-cell).ag-cell-range-top::after {
  content: "";
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  position: absolute;
  border-top: var(--salt-focused-outlineWidth) var(--salt-focused-outlineStyle) var(--salt-focused-outlineColor);
}

div[class*="ag-theme-salt"] .ag-cell.ag-cell-range-selected:not(.ag-cell-range-single-cell).ag-cell-range-right::after {
  content: "";
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  position: absolute;
  border-right: var(--salt-focused-outlineWidth) var(--salt-focused-outlineStyle) var(--salt-focused-outlineColor);
}

div[class*="ag-theme-salt"] .ag-cell.ag-cell-range-selected:not(.ag-cell-range-single-cell).ag-cell-range-bottom::after {
  content: "";
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  position: absolute;
  border-bottom: var(--salt-focused-outlineWidth) var(--salt-focused-outlineStyle) var(--salt-focused-outlineColor);
}

div[class*="ag-theme-salt"] .ag-cell.ag-cell-range-selected:not(.ag-cell-range-single-cell).ag-cell-range-left::after {
  content: "";
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  position: absolute;
  border-left: var(--salt-focused-outlineWidth) var(--salt-focused-outlineStyle) var(--salt-focused-outlineColor);
}

/* INPUT */

div[class*="ag-theme-salt"] .ag-filter input[class^="ag-"][type="text"],
div[class*="ag-theme-salt"] .ag-filter input[class^="ag-"][type="number"],
div[class*="ag-theme-salt"] .ag-column-select input[class^="ag-"][type="text"],
div[class*="ag-theme-salt"] .ag-column-select input[class^="ag-"][type="number"] {
  border: none;
  border-bottom: var(--salt-size-border) var(--salt-editable-borderStyle) var(--salt-editable-borderColor);
  height: calc(var(--salt-size-base) + var(--salt-spacing-100));
  padding: 0 var(--salt-spacing-100);
}

div[class*="ag-theme-salt"] .ag-filter input[class^="ag-"][type="text"]::placeholder,
div[class*="ag-theme-salt"] .ag-filter input[class^="ag-"][type="number"]::placeholder,
div[class*="ag-theme-salt"] .ag-column-select input[class^="ag-"][type="text"]::placeholder,
div[class*="ag-theme-salt"] .ag-column-select input[class^="ag-"][type="number"]::placeholder {
  color: var(--salt-content-secondary-foreground);
  opacity: 1;
}

div[class*="ag-theme-salt"] .ag-filter input[class^="ag-"][type="text"]:focus,
div[class*="ag-theme-salt"] .ag-filter input[class^="ag-"][type="number"]:focus,
div[class*="ag-theme-salt"] .ag-column-select input[class^="ag-"][type="text"]:focus,
div[class*="ag-theme-salt"] .ag-column-select input[class^="ag-"][type="number"]:focus {
  outline: var(--salt-focused-outlineWidth) var(--salt-focused-outlineStyle) var(--salt-focused-outlineColor);
  outline-offset: -2px;
}

div[class*="ag-theme-salt"] .ag-floating-filter-input input[class^="ag-"][type="text"],
div[class*="ag-theme-salt"] .ag-floating-filter-input input[class^="ag-"][type="number"] {
  border: none;
}

/* CHECKBOX */

div[class*="ag-theme-salt"] .ag-checkbox-input-wrapper {
  /* border-radius doesn't work given border is part of the font glyph */
  height: var(--salt-size-selectable);
  width: var(--salt-size-selectable);
  font-size: var(--salt-size-selectable);
  line-height: var(--salt-size-selectable);
}
/* ... */

